Fixed - Menu not showing on Tablets

--- a/content/style.css
+++ b/content/style.css
@@ -433,7 +433,7 @@ header
 }
 
 /* MOBILE NAVIGATION MENU */
- @media screen and (max-width: 768px){ 
+ @media screen and (max-width: 767px){ 
 	li
 	{
 		display: block;
